<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".FormCadastro">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_toolbar_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="01dp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"
                    app:layout_constraintEnd_toEndOf="@id/toolbar"
                    app:layout_constraintStart_toStartOf="@id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Crie uma conta"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </Toolbar>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.appbar.AppBarLayout>

    <!-- VIEW DO NOME -->

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponentsCad"
        android:layout_width="333dp"
        android:layout_height="214dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barra" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="33dp"
        android:layout_marginTop="112dp"
        android:text="  Sobrenome"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.043"

        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="  Nome"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />


    <EditText

        android:id="@+id/edit_nome"
        style="@style/CadastroView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="Nome"
        android:inputType="text"
        android:minHeight="48dp"
        android:maxLength="25"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_sbnome"
        style="@style/CadastroView"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="Sobrenome"
        android:textColor="@color/black"
        android:maxLength="25"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/edit_nome" />




    <View
        android:id="@+id/containerComponents_email"
        style="@style/ContainerComponentsCad"
        android:layout_width="342dp"
        android:layout_height="259dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="144dp"
        android:text="  Senha"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@id/containerComponents_email"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/containerComponents_email"
        app:layout_constraintTop_toTopOf="@id/containerComponents_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="  Email"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/containerComponents_email"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/containerComponents_email"
        app:layout_constraintTop_toTopOf="@id/containerComponents_email" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/CadastroView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:textColor="@color/black"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@id/containerComponents_email"
        app:layout_constraintTop_toTopOf="@id/containerComponents_email" />

    <EditText
        android:id="@+id/edit_senha"
        android:textColor="@color/black"
        style="@style/CadastroView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:hint="Senha"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/containerComponents_email"
        app:layout_constraintTop_toTopOf="@id/edit_email" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_salvar"
        style="@style/Button"
        android:layout_marginTop="68dp"
        android:onClick="salvar"
        android:text="@string/salvar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/containerComponents_email"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents_email"
        tools:ignore="OnClick" />




</androidx.constraintlayout.widget.ConstraintLayout>