<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".FormLogin">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />


    <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            android:hint="Email"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxLength="25"

        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/containerComponents"
        android:hint="Senha"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        android:maxLength="25"

        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_marginTop="28dp"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            android:layout_marginTop="20dp"
            android:visibility="invisible"

            />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_criar_conta"
        style="@style/ButtonBorder"
        android:layout_width="241dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_cadastro"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />


</androidx.constraintlayout.widget.ConstraintLayout>
